--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,8 @@
     background-color: transparent;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: visible;
     justify-content: flex-end;
 }
 
